crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlap-points.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 159,
                "start": 158
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "top_overlap_end"
                  },
                  "type": "overlappoint"
                }
              ],
              "raw_text": "b⌉",
              "span": {
                "end": 164,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "raw_text": "c",
              "span": {
                "end": 166,
                "start": 165
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "d",
                  "type": "text"
                }
              ],
              "raw_text": "d",
              "span": {
                "end": 168,
                "start": 167
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "e",
                  "type": "text"
                }
              ],
              "raw_text": "e",
              "span": {
                "end": 178,
                "start": 177
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "f",
                  "type": "text"
                }
              ],
              "raw_text": "f",
              "span": {
                "end": 180,
                "start": 179
              },
              "type": "word"
            },
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "g",
                  "type": "text"
                }
              ],
              "raw_text": "g",
              "span": {
                "end": 186,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "h",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "bottom_overlap_end"
                  },
                  "type": "overlappoint"
                }
              ],
              "raw_text": "h⌋",
              "span": {
                "end": 191,
                "start": 187
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
