crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlap-spread.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "JAMIE",
            "role": "Speaker",
            "speaker_code": "JAMI"
          },
          {
            "name": "HAROLD",
            "role": "Speaker",
            "speaker_code": "HARO"
          },
          {
            "name": "MILES",
            "role": "Speaker",
            "speaker_code": "MILE"
          },
          {
            "name": "PETE",
            "role": "Speaker",
            "speaker_code": "PETE"
          },
          {
            "name": "ENV",
            "role": "Environment",
            "speaker_code": "ENV"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JAMI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "HARO",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "MILE",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "PETE",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "top",
                  "type": "text"
                }
              ],
              "raw_text": "top",
              "span": {
                "end": 341,
                "start": 338
              },
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 2,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "second",
                  "type": "text"
                }
              ],
              "raw_text": "second",
              "span": {
                "end": 357,
                "start": 351
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "top",
                  "type": "text"
                }
              ],
              "raw_text": "top",
              "span": {
                "end": 361,
                "start": 358
              },
              "type": "word"
            },
            {
              "index": 2,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 3,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "third",
                  "type": "text"
                }
              ],
              "raw_text": "third",
              "span": {
                "end": 377,
                "start": 372
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "top",
                  "type": "text"
                }
              ],
              "raw_text": "top",
              "span": {
                "end": 381,
                "start": 378
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MILE"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "bottom",
                  "type": "text"
                }
              ],
              "raw_text": "bottom",
              "span": {
                "end": 406,
                "start": 400
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "begin",
                  "type": "text"
                }
              ],
              "raw_text": "begin",
              "span": {
                "end": 412,
                "start": 407
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JAMI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "bottom",
                  "type": "text"
                }
              ],
              "raw_text": "bottom",
              "span": {
                "end": 428,
                "start": 422
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "end",
                  "type": "text"
                }
              ],
              "raw_text": "end",
              "span": {
                "end": 432,
                "start": 429
              },
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JAMI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 2,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "second",
                  "type": "text"
                }
              ],
              "raw_text": "second",
              "span": {
                "end": 457,
                "start": 451
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bottom",
                  "type": "text"
                }
              ],
              "raw_text": "bottom",
              "span": {
                "end": 464,
                "start": 458
              },
              "type": "word"
            },
            {
              "index": 2,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PETE"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 3,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "content": [
                {
                  "content": "third",
                  "type": "text"
                }
              ],
              "raw_text": "third",
              "span": {
                "end": 489,
                "start": 484
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bottom",
                  "type": "text"
                }
              ],
              "raw_text": "bottom",
              "span": {
                "end": 496,
                "start": 490
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "begin",
                  "type": "text"
                }
              ],
              "raw_text": "begin",
              "span": {
                "end": 502,
                "start": 497
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JAMI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "third",
                  "type": "text"
                }
              ],
              "raw_text": "third",
              "span": {
                "end": 517,
                "start": 512
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bottom",
                  "type": "text"
                }
              ],
              "raw_text": "bottom",
              "span": {
                "end": 524,
                "start": 518
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "end",
                  "type": "text"
                }
              ],
              "raw_text": "end",
              "span": {
                "end": 528,
                "start": 525
              },
              "type": "word"
            },
            {
              "index": 3,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "JAMI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "ENV": {
      "birth_date": null,
      "code": "ENV",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Environment",
        "speaker": "ENV"
      },
      "name": "ENV",
      "role": "Environment"
    },
    "HARO": {
      "birth_date": null,
      "code": "HARO",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "HARO"
      },
      "name": "HAROLD",
      "role": "Speaker"
    },
    "JAMI": {
      "birth_date": null,
      "code": "JAMI",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "JAMI"
      },
      "name": "JAMIE",
      "role": "Speaker"
    },
    "MILE": {
      "birth_date": null,
      "code": "MILE",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "MILE"
      },
      "name": "MILES",
      "role": "Speaker"
    },
    "PETE": {
      "birth_date": null,
      "code": "PETE",
      "id": {
        "corpus": "SBCSAE",
        "language": "eng",
        "role": "Speaker",
        "speaker": "PETE"
      },
      "name": "PETE",
      "role": "Speaker"
    }
  }
}
