crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlapindices.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "span": {
                "end": 156,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 159,
                "start": 157
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "span": {
                "end": 164,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "some",
                        "type": "text"
                      }
                    ],
                    "raw_text": "some",
                    "span": {
                      "end": 170,
                      "start": 166
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "time",
                        "type": "text"
                      }
                    ],
                    "raw_text": "time",
                    "span": {
                      "end": 175,
                      "start": 171
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 1,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 184,
                "start": 182
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "span": {
                "end": 188,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "span": {
                "end": 192,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "tickets",
                        "type": "text"
                      }
                    ],
                    "raw_text": "tickets",
                    "span": {
                      "end": 201,
                      "start": 194
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "to",
                        "type": "text"
                      }
                    ],
                    "raw_text": "to",
                    "span": {
                      "end": 204,
                      "start": 202
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 2,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 214,
                "start": 211
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "opera",
                  "type": "text"
                }
              ],
              "raw_text": "opera",
              "span": {
                "end": 220,
                "start": 215
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "Mom",
                  "type": "text"
                }
              ],
              "raw_text": "Mom",
              "scoped_annotations": [
                {
                  "index": 1,
                  "type": "overlap_begin"
                }
              ],
              "span": {
                "end": 232,
                "start": 229
              },
              "type": "annotated_word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "honey",
                        "type": "text"
                      }
                    ],
                    "raw_text": "honey",
                    "span": {
                      "end": 252,
                      "start": 247
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "we",
                        "type": "text"
                      }
                    ],
                    "raw_text": "we",
                    "span": {
                      "end": 255,
                      "start": 253
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "need",
                        "type": "text"
                      }
                    ],
                    "raw_text": "need",
                    "span": {
                      "end": 260,
                      "start": 256
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 2,
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "span": {
                "end": 269,
                "start": 267
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "span": {
                "end": 272,
                "start": 270
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
