crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlapindicesmore.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "en",
                  "type": "text"
                }
              ],
              "raw_text": "en",
              "span": {
                "end": 156,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "nu",
                  "type": "text"
                }
              ],
              "raw_text": "nu",
              "span": {
                "end": 159,
                "start": 157
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "moeten",
                        "type": "text"
                      }
                    ],
                    "raw_text": "moeten",
                    "span": {
                      "end": 167,
                      "start": 161
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "we",
                        "type": "text"
                      }
                    ],
                    "raw_text": "we",
                    "span": {
                      "end": 170,
                      "start": 168
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "retracing"
                },
                {
                  "index": 1,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "staan",
                  "type": "text"
                }
              ],
              "raw_text": "staan",
              "span": {
                "end": 187,
                "start": 182
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 190,
                "start": 188
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "op",
                        "type": "text"
                      }
                    ],
                    "raw_text": "op",
                    "span": {
                      "end": 194,
                      "start": 192
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "het",
                        "type": "text"
                      }
                    ],
                    "raw_text": "het",
                    "span": {
                      "end": 198,
                      "start": 195
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 2,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "punt",
                  "type": "text"
                }
              ],
              "raw_text": "punt",
              "span": {
                "end": 209,
                "start": 205
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "om",
                  "type": "text"
                }
              ],
              "raw_text": "om",
              "span": {
                "end": 212,
                "start": 210
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "het",
                  "type": "text"
                }
              ],
              "raw_text": "het",
              "span": {
                "end": 216,
                "start": 213
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "toch",
                  "type": "text"
                }
              ],
              "raw_text": "toch",
              "scoped_annotations": [
                {
                  "index": 3,
                  "type": "overlap_end"
                }
              ],
              "span": {
                "end": 222,
                "start": 218
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "maar",
                  "type": "text"
                }
              ],
              "raw_text": "maar",
              "span": {
                "end": 232,
                "start": 228
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wel",
                  "type": "text"
                }
              ],
              "raw_text": "wel",
              "span": {
                "end": 236,
                "start": 233
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "te",
                  "type": "text"
                }
              ],
              "raw_text": "te",
              "span": {
                "end": 239,
                "start": 237
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "doen",
                  "type": "text"
                }
              ],
              "raw_text": "doen",
              "span": {
                "end": 244,
                "start": 240
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
